# tracking-sdk-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
tracking/: __init__.py  auth.py  client.py  configuration.py  exceptions.py  request.py  response.py
tracking/api/: __init__.py  courier.py  estimated_delivery_date.py  last_checkpoint.py  notification.py  tracking.py
tracking/models/: __init__.py  additional_fields_v1.py  aftership_estimated_delivery_date_tracking.py  carbon_emissions_tracking.py  checkpoint.py  coordinate_checkpoint.py  courier.py  courier_response_v1.py  custom_estimated_delivery_date_tracking.py  custom_fields_tracking_update_tracking_by_slug_tracking_number_request.py  data_courier_response_v1.py  data_notification_response_v1.py  data_tracking_delete_response_v1.py  data_tracking_response_get_multiple_v1.py  data_tracking_response_v1.py  destination_address_estimated_delivery_date_request.py  destination_address_estimated_delivery_date_response.py  detect_courier_response.py  estimated_delivery_date_request.py  estimated_delivery_date_response.py  estimated_pickup_estimated_delivery_date_request.py  estimated_pickup_estimated_delivery_date_response.py  events_checkpoint.py  first_estimated_delivery_tracking.py  get_all_couriers_response.py  get_checkpoint_by_slug_tracking_number_response.py  get_checkpoint_by_tracking_id_response.py  get_trackings_response.py  get_user_couriers_response.py  latest_estimated_delivery_tracking.py  mark_tracking_completed_by_id_request.py  mark_tracking_completed_by_slug_tracking_number_request.py  meta_v1.py  next_couriers_tracking.py  next_couriers_tracking_create_tracking_request.py  notification.py  notification_request_v1.py  notification_response_v1.py  order_processing_time_estimated_pickup_estimated_delivery_date_request.py  order_processing_time_estimated_pickup_estimated_delivery_date_response.py  (+20 more)
