[tool.poetry]
name = "aftership-tracking-sdk"
version = "2.0.1"
description = "The official AfterShip Tracking Python API library"
authors = ["AfterShip <support@aftership.com>"]
license = "MIT"
readme = "README.md"
keywords = ["aftership", "tracking", "track", "fedex", "ups", "usps", "dhl", "shipping", "fulfillment", "couriers", "carriers", "logistics"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "tracking" },
    { include = "*.md" },
    { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = ">= 3.9.0"
pydantic = ">=2"
httpx = ">=0.27.0"
retrying = "^1.3.4"
typing_extensions = ">=4.7.1"
urllib3 = "^2.2.2"
socksio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
flake8 = ">=4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60